Intellij suggestions